# memory_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/specs/embeddable-memory-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/end-to-end-integration-test/: .config.kiro  design.md
data/: llm_results.json  mock_results.json
materials/: 01_paper_bert_rerank.md  02_mem0_search_pipeline.md  03_hf_cross_encoder.md  04_compaction_decay.md  05_langgraph_intro.md  06_langgraph_example.md  07_cursor_intro.md  08_manus_intro.md
reports/: design-e2e-integration-test.html  handover-kimi-mcp-integration.md  handover.md  kimiclaw-custom-mem0-architecture.md  kimiclaw-memory-mechanism.md  know_compaction_decay.md  know_cqrs.md  know_graph_memory.md  know_graph_memory_study.md  know_reranker.md  know_rolling_summary.md  know_rolling_summary_study.md  learning_progress.md  llm_vs_mock.md
src/: __init__.py  evaluate.py  evaluate_llm.py  extractor.py  mock_extractor.py  verify_kimi.py
src/kimiclaw_memory/: __init__.py  config.py  facade.py  mcp_server.py
src/memory/: __init__.py  injector.py  kimi_claw_memory.py
src/memory/compaction/: __init__.py  engine.py
src/memory/storage/: __init__.py  github_manager.py  sqlite_wrapper.py
src/memory/vector_store/: __init__.py
tests/: mcp_stdio_probe.py  test_compaction.py  test_config.py  test_facade.py  test_github_sync.py  test_injector.py  test_integration.py  test_isolation.py  test_mcp_server.py  test_properties.py
